--- a/src/dune
+++ b/src/dune
@@ -5,4 +5,11 @@
 (ocamllex lexer)
 
 (library
-  (name core))
+  (name core)
+  (preprocess
+    (staged_pps ppx_deriving.show ppx_deriving.eq ppx_import))
+)
+
+(env
+ (dev
+  (flags (:standard -warn-error -a))))
